plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'x1'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// 실행 jar만 나오게 고정
jar { enabled = false }

bootJar {
    archiveBaseName = 'application' // build/libs/application.jar 로 고정
    archiveVersion = ''              // 파일명에 버전 제거
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

    implementation 'org.hibernate.validator:hibernate-validator'
    // 분리된 공통 클래스 모듈 추가
    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.lettuce:lettuce-core'

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.lettuce:lettuce-core'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')

    implementation 'org.modelmapper:modelmapper:3.1.1'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    // s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // ▶ 공식 OpenAI Java SDK
    implementation "com.openai:openai-java:1.5.0"
    // ▶ JSON 파싱용 Jackson
    implementation "com.fasterxml.jackson.core:jackson-databind"

    implementation 'mysql:mysql-connector-java:8.0.33'

//    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'

    // Logback - 로깅을 위한 구현체 라이브러리
    implementation 'ch.qos.logback:logback-classic'

    // Apache POI - 분석 결과를 Excel 파일로 내보내기 위한 기본 라이브러리
    implementation 'org.apache.poi:poi:5.2.3'

    // Apache POI OOXML - .xlsx 형식의 Excel 파일 처리를 위한 확장 라이브러리
    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Google ID 토큰 검증
    implementation("com.google.api-client:google-api-client:2.2.0")

    // Jackson 기반 JSON 팩토리 (JacksonFactory가 여기 들어있음)
    implementation("com.google.http-client:google-http-client-jackson2:1.43.3")


}

tasks.named('test') {
    useJUnitPlatform()
}
